--- a/melody-main/package.json
+++ b/melody-main/package.json
@@ -62,6 +62,7 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.3",
     "@next/eslint-plugin-next": "^16.1.1",
     "@playwright/test": "^1.51.1",
     "@tailwindcss/postcss": "^4.1.9",
